--- a/index/unilocate/unilocate.html
+++ b/index/unilocate/unilocate.html
@@ -26,23 +26,25 @@
           <script type = 'text/javascript' src='script.js' ></script>
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
-                    <h2 class="text-white-50 mx-auto mt-1 mb-5" id='kyssa'>Kas sul on ees teha raske valik, milleks on valida endale eriala, mida ülikooli minna õppima, kuid sul pole ideed? Vot meil on sulle lahendus!</h2>
+                    <h2 class="text-white-50 mx-auto mt-1 mb-5" id='kyssa'>Alusta oma teekonnaga leida endale ideaalne eriala</h2>
                     <input onclick="alusta()" class="btn btn-primary js-scroll-trigger" style='display: inline;' type="button" value="Alusta" id="alusta"></input>
-                    <input onclick="n1()" class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Humantiaarteadused" id="n11"></input>
-                    <input class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Reaalteadused" id="n12"></input>
-                    <input class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Midagi vahepealset" id="n13"></input>
-                    <input onclick="n2()" class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Jah" id="n21"></input>
-                    <input class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Ei" id="n22"></input>
-                    <input onclick="n3()" class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Inimesi aidata" id="n31"></input>
-                    <input class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Midagi luua" id="n32"></input>
+                    <input class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="1" id="n11"></input>
+                    <input class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="2" id="n12"></input>
+                    <input class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="3" id="n13"></input>
+                    <input onclick="n1()" class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="4" id="n14"></input>
+                    <input class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="5" id="n15"></input>
+                    <input onclick="n2()" class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Kirjutaksin" id="n21"></input>
+                    <input class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Joonistaksin" id="n22"></input>
+                    <input onclick="n3()" class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Oleksin sõpradega" id="n31"></input>
+                    <input class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Oleksin üksinda" id="n32"></input>
                     <input onclick="n4()" class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Jah" id="n41"></input>
                     <input class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Ei" id="n42"></input>
                     <input onclick="n5()" class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Jah" id="n51"></input>
                     <input class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Ei" id="n52"></input>
-                    <input onclick="n6()" class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Jah" id="n61"></input>
-                    <input class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Ei" id="n62"></input>
-                    <input onclick="n7()" class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Jah" id="n71"></input>
-                    <input class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Ei" id="n72"></input>
+                    <input onclick="n6()" class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Tiimimängija" id="n61"></input>
+                    <input class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" value="Üksik hunt" id="n62"></input>
+                    <a class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" href='gulag.html' value="Jah" id="n71">Jah</a>
+                    <a class="btn btn-primary js-scroll-trigger" style='display: none;' type="button" href='juura/juura.html' value="Ei" id="n72">Ei</a>
                 </div>
             </div>
         </header>
