--- a/index/index.html
+++ b/index/index.html
@@ -16,18 +16,77 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
+      <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+            <div class="container">
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">Unilocate</a>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                </div>
+            </div>
+        </nav>
         <!-- Masthead-->
         <header class="masthead">
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Unilocate</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Leia oma haridus</h2>
+                    <h2 class="text-white-50 mx-auto mt-1 mb-5">Leia oma haridus</h2>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Kas sul pole ideed, mida minna ülikooli õppima? Vot meil on sulle lahendus!</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="unilocate/unilocate.html">Mida ma peaksin minema õppima?</a>
                 </div>
             </div>
         </header>
+
+                    <!-- Projects-->
+        <section class="projects-section bg-light" id="tmistoimps">
+            <div class="container">
+                <!-- Featured Project Row-->
+                <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/deltahoone.jpg" alt="" /></div>
+                    <div class="col-xl-4 col-lg-5">
+                        <div class="featured-text text-center text-lg-left">
+                            <h4>Mida Unilocate teeb?</h4>
+                            <p class="text-black-50 mb-0">On palju noori, kaasaarvatud meie, kes ei tea, mida peaks minema ülikooli õppima. Seega me lõime lahenduse, mis aitab inimese iseloomu ja huvide põhjal valida temale ideaalse suuna.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project One Row-->
+                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/taltech.jpg" alt="" /></div>
+                    <div class="col-lg-6">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <h4 class="text-white">Kes me oleme?</h4>
+                                    <p class="mb-0 text-white-50">Meie timmiliikmed on Mihkel Jesse, Samuel Roost, Ken-Egert Kasuk ja Oskar Pukk. </p>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project Two Row-->
+                <div class="row justify-content-center no-gutters">
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/stanford.jpg" alt="" /></div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-right">
+                                    <h4 class="text-white">Meie lugu</h4>
+                                    <p class="mb-0 text-white-50">Oleme noored, kellest keegi ei teadnud, mida ülikoolis õppida ja teame, et sama mure on ka paljudel teistel. Seega otsustasime luua lahenduse - Unilocate, mis aitaks leida noortel õige eriala.</p>
+                                    <hr class="d-none d-lg-block mb-0 mr-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Contact-->
-        <section class="contact-section bg-black">
+        <section class="contact-section bg-black" id='contact'>
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 mb-3 mb-md-0">
@@ -46,7 +105,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50"><a href="#!">info@unilocate.com</a></div>
+                                <div class="small text-black-50"><a href="#!">liisa@tammiste.com</a></div>
                             </div>
                         </div>
                     </div>
@@ -62,8 +121,8 @@
                     </div>
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                    <a class="mx-2" href="https://twitter.com/liisatammiste?lang=en"><i class="fab fa-twitter"></i></a>
+                    <a class="mx-2" href="https://www.facebook.com/liisa.tammiste.3"><i class="fab fa-facebook-f"></i></a>
                     <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
                 </div>
             </div>
