--- a/index/unilocate/juura/juura.html
+++ b/index/unilocate/juura/juura.html
@@ -30,6 +30,7 @@
                   <h1 class="mx-auto my-0 text-uppercase">Juura</h1>
                   <h2 class="text-white-50 mx-auto mt-1 mb-5" id='kyssa'>Juurat õppides on potentsiaalsed karjäärid: advokaat, jurist ja kohtunik.</h2>
                   <h2 class="text-white-50 mx-auto mt-1 mb-5" id='kyssa'>Juurat nõudvad töökohad on enamasti suure töömahu kuid ka suure palgaga. Tihti peab tegema ületunde, kuid samas on töö huvitav ja varieeruv.</h2>
+                  <h2 class="text-white-50 mx-auto mt-1 mb-5" id='kyssa'>Juurat saab õppida Tartu Ülikoolis ja Tal Techis.</h2>
                 </div>
             </div>
         </header>
